tests/functional2/lang/parser-merge-attrs/parse-fail-err1.err.exp
error: attribute 'x.z' already defined at /pwd/in.nix:2:3
       at /pwd/in.nix:3:16:
            2|   x.z = 3;
            3|   x = { y = 3; z = 3; };
             |                ^
            4| }
